# hydra

./: .env  .gitignore  Txt Diagram  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json  docker-compose.gpu.yml  docker-compose.yml
prisma/: schema.prisma
scripts/: gen-icons.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/backend/: index.ts
src/backend/controllers/: authController.ts  fuelController.ts  inventoryController.ts  itemsController.ts  posController.ts  promotionsController.ts  reconController.ts
src/backend/middleware/: auth.ts  errorHandler.ts
src/backend/routes/: auth.ts  departments.ts  fuel.ts  inventory.ts  items.ts  pos.ts  promotions.ts  reconciliation.ts  vendors.ts
src/backend/services/: authService.ts  fuelService.ts  inventoryService.ts  posService.ts  priceBookServices.ts  reconService.ts
src/backend/types/: express.d.ts
src/frontend/: App.tsx
src/frontend/components/: Layout.tsx  ProtectedRoute.tsx
src/frontend/context/: AuthContext.tsx
src/frontend/lib/: api.ts
src/frontend/pages/: Dashboard.tsx  Fuel.tsx  Inventory.tsx  Login.tsx  POS.tsx  PriceBook.tsx  Promotions.tsx  Reconciliation.tsx
